--- a/src/main/resources/org/uet/library_management/ui/auth/login.fxml
+++ b/src/main/resources/org/uet/library_management/ui/auth/login.fxml
@@ -50,12 +50,16 @@
                 <PasswordField fx:id="passwordLoginField" promptText="Mật khẩu" minWidth="300" maxWidth="300"/>
             </HBox>
 
+            <VBox fx:id="errorLabel" alignment="CENTER" spacing="-15">
+                <Label fx:id="invalidLabel" styleClass="empty-label" alignment="CENTER" text="Tài khoản hoặc mật khẩu không đúng. Vui lòng kiểm tra lại" />
+                <Label fx:id="inputAllLabel" styleClass="input-all-label" alignment="CENTER" text="Vui lòng nhập đủ email và mật khẩu" />
+            </VBox>
+
             <Button fx:id="loginButton" onAction="#handleLoginButton" mnemonicParsing="false" text="Đăng nhập"
                         minWidth="350" maxWidth="350" minHeight="35" maxHeight="35"/>
             <HBox fx:id="registerBox" alignment="CENTER">
                 <Label fx:id="askRegisterLabel" text="Chưa có tài khoản?"/>
-                <Button fx:id="openRegisterButton" onAction="#handleOpenRegisterButton" mnemonicParsing="false" text="Đăng ký"
-                        />
+                <Button fx:id="openRegisterButton" onAction="#handleOpenRegisterButton" mnemonicParsing="false" text="Đăng ký" />
             </HBox>
 
         </VBox>
