--- a/src/main/resources/org/uet/library_management/ui/settings/changeAvatar.fxml
+++ b/src/main/resources/org/uet/library_management/ui/settings/changeAvatar.fxml
@@ -9,7 +9,7 @@
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="org.uet.library_management.ui.settings.ChangeAvatarController"
       styleClass="changes-vbox">
-    <Button onAction="#handleBackButton" styleClass="settings-button" text="Back" />
+
 
     <Pane styleClass="spacing-pane" />
 
@@ -21,6 +21,8 @@
     <Button text="Upload Image" onAction="#uploadImage"/>
 
     <Pane styleClass="spacing-pane" />
-
-    <Button fx:id="changeAvatarButton" styleClass="changes-button" text="Change Avatar" />
+    <VBox alignment="CENTER" spacing="10">
+        <Button fx:id="changeAvatarButton" styleClass="changes-button" text="Change Avatar" />
+        <Button onAction="#handleBackButton" styleClass="changes-button" text="Quay lại" />
+    </VBox>
 </VBox>
