--- a/src/main/resources/org/uet/library_management/ui/settings/changeEmail.fxml
+++ b/src/main/resources/org/uet/library_management/ui/settings/changeEmail.fxml
@@ -10,16 +10,19 @@
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="org.uet.library_management.ui.settings.ChangeEmailController"
       styleClass="changes-vbox">
-    <Button onAction="#handleBackButton" styleClass="settings-button" text="Back" />
+
 
     <Pane styleClass="spacing-pane" />
 
-    <Label text="Change email" />
+    <Label text="Email mới" />
 
     <Pane styleClass="spacing-pane" />
 
     <TextField fx:id="emailField" promptText="Your new email" />
     <Pane styleClass="spacing-pane" />
 
-    <Button styleClass="changes-button" onAction="#handleChangeEmail" text="Change Email" />
+    <VBox alignment="CENTER" spacing="10">
+        <Button styleClass="changes-button" onAction="#handleChangeEmail" text="Change Email" />
+        <Button onAction="#handleBackButton" styleClass="changes-button" text="Quay lại" />
+    </VBox>
 </VBox>
