--- a/src/main/resources/org/uet/library_management/ui/settings/changePassword.fxml
+++ b/src/main/resources/org/uet/library_management/ui/settings/changePassword.fxml
@@ -10,22 +10,27 @@
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="org.uet.library_management.ui.settings.ChangePasswordController"
       styleClass="changes-vbox">
-    <Button onAction="#handleBackButton" styleClass="settings-button" text="Back" />
+
 
     <Pane styleClass="spacing-pane" />
 
-    <Label text="Change password" />
+    <Label text="Đổi mật khẩu" alignment="CENTER" />
     <Label text="Your password must be at least 6 characters and should include a combination of numbers,
     letters and special characters (!$@%)." style="-fx-font-size: 12px; -fx-text-fill: gray" />
 
     <Pane styleClass="spacing-pane" />
 
-    <PasswordField promptText="Current password" />
+    <PasswordField styleClass="new-password-field" promptText="Mật khẩu hiện tại" />
     <Pane styleClass="spacing-pane" />
-    <PasswordField fx:id="newPasswordField" promptText="New password" />
+    <PasswordField fx:id="newPasswordField" styleClass="new-password-field" promptText="Mật khẩu mới" />
     <Pane styleClass="spacing-pane" />
-    <PasswordField promptText="Retype new password" />
+    <PasswordField styleClass="new-password-field" promptText="Nhập lại mật khẩu mới" />
     <Pane styleClass="spacing-pane" />
 
-    <Button styleClass="changes-button" onAction="#handleChangePasswordButton" text="Change Password" />
+    <Label fx:id="emptyLabel" styleClass="empty-label" alignment="CENTER" text="Vui lòng điền đầy đủ thông tin!" />
+
+    <VBox alignment="CENTER" spacing="10">
+        <Button styleClass="changes-button" onAction="#handleChangePasswordButton" text="Đổi mật khẩu" />
+        <Button onAction="#handleBackButton" styleClass="changes-button" text="Quay lại" />
+    </VBox>
 </VBox>
