--- a/src/main/resources/org/uet/library_management/styles/bookDetail.css
+++ b/src/main/resources/org/uet/library_management/styles/bookDetail.css
@@ -118,7 +118,7 @@
     -fx-font-size: 16px;
     -fx-padding: 0 0 0 10;
     -fx-wrap-text: true;
-    -fx-background-color: #EFFBFF;
+    /*-fx-background-color: #EFFBFF;*/
 }
 #moreButton {
     -fx-font-weight: bold;
@@ -133,7 +133,7 @@
 }
 #bookInformationBox {
     -fx-spacing: 10px;
-    -fx-background-color: #EFFBFF;
+    /*-fx-background-color: #dddddd;*/
 }
 #RateAndReviewBox {
     -fx-spacing: 10px;
