--- a/src/main/resources/org/uet/library_management/styles/register.css
+++ b/src/main/resources/org/uet/library_management/styles/register.css
@@ -16,27 +16,30 @@
     -fx-font-size: 36px;
     -fx-font-weight: bold;
     /*-fx-text-fill: #ffffff;*/
-    -fx-padding: 20 20 20 20
+    -fx-padding: 20 20 20 20;
+    -fx-font-family: "Nunito Black";
 }
 
 .text-field, .password-field {
     /*-fx-background-color: #333333;*/
     -fx-text-fill: #4b4d4c;
     -fx-pref-width: 50;
+    -fx-font-family: "Nunito";
 }
 
 .button {
     -fx-background-color: #007bff;
     -fx-text-fill: #ffffff;
+    -fx-font-family: "Nunito Black";
 }
 
-.login-button {
+/*.login-button {
     -fx-background-color: linear-gradient(to bottom, #aac9f1, #73a2e1);
 }
 
 .register-button {
     -fx-background-color: linear-gradient(to bottom, #aac9f1, #73a2e1);
-}
+}*/
 
 .empty-label {
     -fx-text-fill: transparent;
@@ -50,23 +53,27 @@
     -fx-min-width: 350;
     -fx-max-width: 350;
     -fx-prompt-text-fill: #ffffff;
-    -fx-font-family: "Kinetika Medium";
+    -fx-font-family: "Nunito";
     -fx-text-fill: #ffffff;
 }
 
 .register-button {
     -fx-background-color: white;
     -fx-text-fill: #007bff;
-    -fx-font-family: "Kinetika Black";
+    -fx-font-family: "Nunito Black";
     -fx-font-size: 18px;
     -fx-background-radius: 15px;
 }
 
 .choice-box {
-    -fx-background-color: white;
+    -fx-background-color: transparent;
     -fx-text-fill: #007bff;
-    -fx-font-family: "Kinetika Black";
+    /*-fx-font-family: "Kinetika Black";*/
     -fx-font-size: 18px;
+    -fx-min-height: 0;
+    -fx-max-height: 0;
+    -fx-min-width: 0;
+    -fx-max-width: 0;
 }
 
 .box {
