--- a/src/main/resources/org/uet/library_management/styles/menu.css
+++ b/src/main/resources/org/uet/library_management/styles/menu.css
@@ -41,12 +41,12 @@
     -fx-font-weight: BOLD;
     -fx-font-size: 16px;
     -fx-padding: 20 0 5 0;
-    -fx-font-family: "Montserrat Extrabold";
+    -fx-font-family: "Nunito Black";
 }
 
 .menu-button {
     -fx-background-color: transparent;
-    -fx-font-family: "Montserrat";
+    -fx-font-family: "Nunito";
     -fx-text-fill: #262626;
     -fx-pref-width: 170;
     -fx-pref-height: 30;
