--- a/src/main/resources/org/uet/library_management/ui/admin/forms/loanForm.fxml
+++ b/src/main/resources/org/uet/library_management/ui/admin/forms/loanForm.fxml
@@ -9,33 +9,43 @@
             styleClass="content-pane">
     <top>
         <VBox styleClass="admin-head">
-            <Label styleClass="head-label" text="LoanForm" />
+            <Label styleClass="head-label" text="Loan Form" />
             <Separator styleClass="separator" />
         </VBox>
     </top>
     <center>
         <VBox styleClass="vbox-padding">
             <GridPane hgap="10">
-                <Label text="Title" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <TextField fx:id="titleField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <Label text="Loan Date" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <TextField fx:id="loanDateField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="1" />
 
-                <Label text="Authors" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                <TextField fx:id="authorsField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <Label text="Due Date" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <TextField fx:id="dueDateField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="3" />
 
-                <Label text="ISBN 13" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                <TextField fx:id="isbn13Field" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                <Label text="Return Date" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                <TextField fx:id="returnDateField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="5" />
 
-                <Label text="Description" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-                <TextField fx:id="descriptionField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+                <Label text="Status" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                <TextField fx:id="statusField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="7" />
 
-                <Label text="Categories" GridPane.columnIndex="0" GridPane.rowIndex="8" />
-                <TextField fx:id="categoriesField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="9" />
+                <Label text="ISBN 13" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+                <TextField fx:id="isbn13Field" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="9" />
 
-                <Label fx:id="errorWarning" textFill="RED" GridPane.columnIndex="0" GridPane.rowIndex="10" />
+                <Label text="Title" GridPane.columnIndex="0" GridPane.rowIndex="10" />
+                <TextField fx:id="titleField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="11" />
+
+                <Label text="User ID" GridPane.columnIndex="0" GridPane.rowIndex="12" />
+                <TextField fx:id="userIdField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="13" />
+
+                <Label fx:id="errorWarning" textFill="RED" GridPane.columnIndex="0" GridPane.rowIndex="14" />
+
                 <columnConstraints>
                     <ColumnConstraints prefWidth="700" />
                 </columnConstraints>
+
                 <rowConstraints>
+                    <RowConstraints />
+                    <RowConstraints />
                     <RowConstraints />
                     <RowConstraints />
                     <RowConstraints />
@@ -49,6 +59,7 @@
                     <RowConstraints />
                 </rowConstraints>
             </GridPane>
+
             <Button onAction="#returnToEdit" styleClass="cancel-button" text="Cancel" />
             <Button onAction="#handleSaveForm" styleClass="save-button" text="Save" />
         </VBox>
