--- a/src/main/resources/org/uet/library_management/ui/admin/forms/userForm.fxml
+++ b/src/main/resources/org/uet/library_management/ui/admin/forms/userForm.fxml
@@ -16,26 +16,31 @@
     <center>
         <VBox styleClass="vbox-padding">
             <GridPane hgap="10">
-                <Label text="Title" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                <TextField fx:id="titleField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <Label text="Name" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <TextField fx:id="nameField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="1" />
 
-                <Label text="Authors" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                <TextField fx:id="authorsField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <Label text="Phone Number" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                <TextField fx:id="phoneNumberField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="3" />
 
-                <Label text="ISBN 13" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                <TextField fx:id="isbn13Field" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                <Label text="Email" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                <TextField fx:id="emailField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="5" />
 
-                <Label text="Description" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-                <TextField fx:id="descriptionField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+                <Label text="Address" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                <TextField fx:id="addressField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="7" />
 
-                <Label text="Categories" GridPane.columnIndex="0" GridPane.rowIndex="8" />
-                <TextField fx:id="categoriesField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="9" />
+                <Label text="Membership Status" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+                <TextField fx:id="membershipStatusField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="9" />
 
-                <Label fx:id="errorWarning" textFill="RED" GridPane.columnIndex="0" GridPane.rowIndex="10" />
+                <Label text="Privileges" GridPane.columnIndex="0" GridPane.rowIndex="10" />
+                <TextField fx:id="privilegesField" styleClass="admin-text-field" GridPane.columnIndex="0" GridPane.rowIndex="11" />
+
+                <Label fx:id="errorWarning" textFill="RED" GridPane.columnIndex="0" GridPane.rowIndex="12" />
                 <columnConstraints>
                     <ColumnConstraints />
                 </columnConstraints>
                 <rowConstraints>
+                    <RowConstraints />
+                    <RowConstraints />
                     <RowConstraints />
                     <RowConstraints />
                     <RowConstraints />
