--- a/src/main/resources/org/uet/library_management/ui/settings/changePassword.fxml
+++ b/src/main/resources/org/uet/library_management/ui/settings/changePassword.fxml
@@ -14,17 +14,17 @@
 
     <Pane styleClass="spacing-pane" />
 
-    <Label text="Đổi mật khẩu" alignment="CENTER" />
+    <Label text="Thay đổi mật khẩu" alignment="CENTER" />
     <Label text="Your password must be at least 6 characters and should include a combination of numbers,
     letters and special characters (!$@%)." style="-fx-font-size: 12px; -fx-text-fill: gray" />
 
     <Pane styleClass="spacing-pane" />
 
-    <PasswordField styleClass="new-password-field" promptText="Mật khẩu hiện tại" />
+    <PasswordField styleClass="settings-field" promptText="Mật khẩu hiện tại" />
     <Pane styleClass="spacing-pane" />
-    <PasswordField fx:id="newPasswordField" styleClass="new-password-field" promptText="Mật khẩu mới" />
+    <PasswordField fx:id="newPasswordField" styleClass="settings-field" promptText="Mật khẩu mới" />
     <Pane styleClass="spacing-pane" />
-    <PasswordField styleClass="new-password-field" promptText="Nhập lại mật khẩu mới" />
+    <PasswordField styleClass="settings-field" promptText="Nhập lại mật khẩu mới" />
     <Pane styleClass="spacing-pane" />
 
     <Label fx:id="emptyLabel" styleClass="empty-label" alignment="CENTER" text="Vui lòng điền đầy đủ thông tin!" />
