--- a/src/main/resources/org/uet/library_management/styles/register.css
+++ b/src/main/resources/org/uet/library_management/styles/register.css
@@ -24,7 +24,7 @@
     /*-fx-background-color: #333333;*/
     -fx-text-fill: #4b4d4c;
     -fx-pref-width: 50;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
 }
 
 .button {
@@ -53,7 +53,7 @@
     -fx-min-width: 350;
     -fx-max-width: 350;
     -fx-prompt-text-fill: #ffffff;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
     -fx-text-fill: #ffffff;
 }
 
