--- a/src/main/resources/org/uet/library_management/styles/home.css
+++ b/src/main/resources/org/uet/library_management/styles/home.css
@@ -14,7 +14,7 @@
 .title {
     -fx-font-size: 24px;
     -fx-text-fill: black;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
 
 }
 #arrowButton {
