--- a/src/main/resources/org/uet/library_management/styles/menu.css
+++ b/src/main/resources/org/uet/library_management/styles/menu.css
@@ -46,7 +46,7 @@
 
 .menu-button {
     -fx-background-color: transparent;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
     -fx-text-fill: #262626;
     -fx-pref-width: 170;
     -fx-pref-height: 30;
