--- a/src/main/resources/org/uet/library_management/styles/settings.css
+++ b/src/main/resources/org/uet/library_management/styles/settings.css
@@ -5,7 +5,6 @@
     -fx-font-size: 14px;
     /*-fx-alignment: LEFT;*/
     -fx-padding: 20 20 20 20;
-    -fx-font-family: "Nunito";
 }
 
 .user-section {
@@ -29,7 +28,7 @@
     -fx-pref-width: 410;
     -fx-font-size: 12px;
     -fx-text-fill: gray;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
 }
 
 .settings-label {
@@ -37,7 +36,7 @@
     -fx-pref-width: 170;
     -fx-font-size: 14px;
     -fx-padding: 0 0 5 20;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
 }
 
 .settings-button {
@@ -47,7 +46,7 @@
     -fx-pref-width: 410;
     -fx-pref-height: 30;
     -fx-alignment: CENTER_LEFT;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
 }
 
 .settings-button:hover {
@@ -61,7 +60,7 @@
     -fx-font-size: 12px;
     -fx-font-weight: BOLD;
     -fx-padding: 5 0 0 20;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
 }
 
 .changes-vbox {
@@ -71,7 +70,7 @@
     -fx-font-size: 14px;
     /*-fx-alignment: LEFT;*/
     -fx-padding: 20 20 20 20;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
 }
 
 .changes-button {
@@ -80,17 +79,21 @@
     -fx-background-color: #0064e0;
     -fx-background-radius: 20px;
     -fx-border-radius: 20px;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
+}
+
+.changes-button:hover {
+    -fx-background-color: #5a96e0;
 }
 
 .empty-label {
     -fx-text-fill: transparent;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
 }
 
-.new-password-field {
-    -fx-background-color: #a2c2fa;
+.settings-field {
+    -fx-background-color: #bed4fa;
     -fx-background-radius: 10px;
     -fx-prompt-text-fill: black;
-    -fx-font-family: "Nunito";
+    -fx-font-family: "Nunito Medium";
 }
