--- a/src/main/resources/org/uet/library_management/ui/borrowedBooks.fxml
+++ b/src/main/resources/org/uet/library_management/ui/borrowedBooks.fxml
@@ -5,7 +5,7 @@
 
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.uet.library_management.ui.GetAllController"
+            fx:controller="org.uet.library_management.ui.BorrowedBooksController"
             styleClass="content-pane">
     <top>
         <VBox styleClass="head">
