--- a/src/main/resources/org/uet/library_management/ui/bookDetailPage.fxml
+++ b/src/main/resources/org/uet/library_management/ui/bookDetailPage.fxml
@@ -15,11 +15,11 @@
                     <ImageView fx:id="bookCover" fitHeight="400" fitWidth="200" preserveRatio="true" />
                     <VBox fx:id="mainDetailBox" fillWidth="true">
                         <HBox fx:id="titleAndBookmarkBox">
-                            <Label fx:id="title" />
+                            <Label fx:id="title" styleClass="ratesAndCategories" />
                             <Button fx:id="bookDetailBookmarkButton" onMouseClicked="#onBookmarkButtonClicked" />
 
                         </HBox>
-                        <Label fx:id="author" />
+                        <Label fx:id="author" style="-fx-text-fill: rgba(255, 255, 255, 0.7); -fx-padding: 0 0 0 10;" />
                         <HBox fx:id="rateCategoryBox" alignment="CENTER_LEFT">
                             <Label fx:id="rates" styleClass="ratesAndCategories" />
                             <Label fx:id="categories" styleClass="ratesAndCategories" />
@@ -29,12 +29,13 @@
                     </VBox>
                 </HBox>
 
-                <VBox fx:id="descriptionAndCommentBox" alignment="CENTER_LEFT" >
+                <VBox fx:id="descriptionAndCommentBox" alignment="CENTER_LEFT" style="-fx-padding: 0 0 0 50">
                     <VBox fx:id="descriptionBox" alignment="CENTER_LEFT" >
                         <Label styleClass="section" text="Description" />
                         <Label fx:id="descriptionText" />
                         <Button fx:id="moreButton" onAction="#onMoreButtonClicked" text="...More" visible="false" />
                     </VBox>
+                    <Separator />
 
                     <VBox fx:id="bookInformationBox">
                         <Label styleClass="section" text="Book Information" />
@@ -75,9 +76,10 @@
                             <Label fx:id="maturityRatingsName" styleClass="normalText" />
                         </HBox>
                     </VBox>
+                    <Separator />
 
                     <VBox fx:id="RateAndReviewBox" alignment="CENTER_LEFT">
-                        <Label fx:id="rateHeader" text="Rate and review" />
+                        <Label fx:id="rateHeader" text="Rate and review" style="-fx-font-weight: bold" />
                         <Label fx:id="reviewRate" styleClass="noteText" text="Ratings (0/5)"/>
 
                         <HBox fx:id="starsBox" spacing="10" prefWidth="50" prefHeight="50">
