--- a/src/main/resources/org/uet/library_management/styles/bookDetail.css
+++ b/src/main/resources/org/uet/library_management/styles/bookDetail.css
@@ -1,3 +1,8 @@
+.titleOfBookDetail {
+    -fx-font-size: 12px;
+    -fx-text-fill: rgba(255, 255, 255, 0.7);
+    -fx-font-family: "Montserrat Light";
+}
 
 .ratesAndCategories {
     -fx-font-size: 12px;
